tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__Poke-AAAAAAAAAAAAAAAAAAAAsQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 177,
  "prerequisites": [
    161
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Time to get some blood. You will have to start with your own...\n\nYou get 100LP in the altar for each use.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§oPoke§r",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    161
  ],
  "rewards": [],
  "tasks": []
}
