tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__PotionFlightMode-AAAAAAAAAAAAAAAAAAABnw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 415,
  "prerequisites": [
    411,
    414
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Just to give you an idea what is possible. Let's do a sample potion. Shall we? Get yourself a potion flask, a feather and one of your weak binding agents you made. Combine those in the chemistry set, and you'll get something that you'll probably want to keep for a while.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Potion: Flight Mode",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    411,
    414
  ],
  "rewards": [],
  "tasks": []
}
