tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__PowerfulShards-AAAAAAAAAAAAAAAAAAACvw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 703,
  "prerequisites": [
    714
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The demons summoned are rather strong, but their souls contain immense power!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Powerful Shards",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    714
  ],
  "rewards": [],
  "tasks": []
}
