tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__Rituals-AAAAAAAAAAAAAAAAAAABsQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 433,
  "prerequisites": [
    2453,
    410
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Time for some rituals. The most basic one you'll probably get first is the ritual of binding.\n\nThere are various rituals, some useful, some not. The other ones you're likely to care about are: Serenade of the Nether (if you don't like everburn urns), Ballad of Alchemy (for automating alchemy), Well of Suffering (for automating blood collection), Mark of the Falling Tower (summon a meteor filled with ore), and the endgame Convocation of the Damned.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Rituals",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2453,
    410
  ],
  "rewards": [],
  "tasks": []
}
